fix all uses of "they" and "three"

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -230,7 +230,7 @@ Some basic words to get you started on sentence construction.
    <p>noyo&emsp;<em>I</em></p>
    <p>nîmû&emsp;<em>you</em></p>
    <p>nû&emsp;<em>we</em></p>
-   <p>nîûn&emsp;<em>they</em></p>
+   <p>nîo&emsp;<em>they</em></p>
 </HisyeoTabs>
 
 #### Choose a verb:
