--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -61,7 +61,7 @@ clause we learned about above. It indicates that an *action* is what is desired
 (the verb of the main predicate).
 
 <HisyeoTabs>
-    <p>noyo monodo nîûn hoî suhot dus.&emsp;<em>I am meeting them at 10</em></p>
+    <p>noyo monodo nîo hoî suhot dus.&emsp;<em>I am meeting them at 10</em></p>
     <p>nû kûu monodo oxon côûfon bitûn cî.&emsp;<em>Let's meet for supper, sound good?</em></p>
     <p>nîmû fôlun xe monodo noyo hoî cihôû ko.&emsp;<em>Do you want to meet me later?</em></p>
 </HisyeoTabs>
@@ -86,7 +86,7 @@ question or the negatitive marker (<HisyeoWord is='yôk'/>) or both.
     <p>mokon.&emsp;<em>"Yes."</em></p>
     <p>nîmû côûfon ôfo ko.&emsp;<em>"Did you cook this?"</em></p>
     <p>yôk.&emsp;<em>"No."</em></p>
-    <p>nîmû monodo sî nîûn bi ôhel ko.&emsp;<em>"Have you met them before?"</em></p>
+    <p>nîmû monodo sî nîo bi ôhel ko.&emsp;<em>"Have you met them before?"</em></p>
     <p>monodo yôk.&emsp;<em>"I haven't"</em></p>
 </HisyeoTabs>
 
@@ -126,7 +126,7 @@ question or the negatitive marker (<HisyeoWord is='yôk'/>) or both.
     <p>mokon.&emsp;<em>"Yes."</em></p>
     <p>nû côûfon ôfo cî.&emsp;<em>"Let's cook this!"</em></p>
     <p>yôk.&emsp;<em>"No."</em></p>
-    <p>nîmû monodo nîûn cî.&emsp;<em>"Do you agree to meet them?"</em></p>
+    <p>nîmû monodo nîo cî.&emsp;<em>"Do you agree to meet them?"</em></p>
     <p>monodo yôk.&emsp;<em>"I don't."</em></p>
 </HisyeoTabs>
 
