--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -33,7 +33,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>0</td><td><HisyeoText kind='latin'>xûnyu</HisyeoText></td></tr>
         <tr><td>1</td><td><HisyeoText kind='latin'>kut</HisyeoText></td></tr>
         <tr><td>2</td><td><HisyeoText kind='latin'>dûî</HisyeoText></td></tr>
-        <tr><td>3</td><td><HisyeoText kind='latin'>son</HisyeoText></td></tr>
+        <tr><td>3</td><td><HisyeoText kind='latin'>niswî</HisyeoText></td></tr>
         <tr><td>4</td><td><HisyeoText kind='latin'>nonkû</HisyeoText></td></tr>
         <tr><td>5</td><td><HisyeoText kind='latin'>tîû</HisyeoText></td></tr>
         <tr><td>6</td><td><HisyeoText kind='latin'>toû</HisyeoText></td></tr>
@@ -53,23 +53,23 @@ that you'll need to count all the way up to a trillion.
         <tr><td>20</td><td><HisyeoText kind='latin'>dûî dus</HisyeoText></td></tr>
         <tr><td>21</td><td><HisyeoText kind='latin'>dûî dus kut</HisyeoText></td></tr>
         <tr><td>22</td><td><HisyeoText kind='latin'>dûî dus dûî</HisyeoText></td></tr>
-        <tr><td>23</td><td><HisyeoText kind='latin'>dûî dus son</HisyeoText></td></tr>
+        <tr><td>23</td><td><HisyeoText kind='latin'>dûî dus niswî</HisyeoText></td></tr>
         <tr><td>24</td><td><HisyeoText kind='latin'>dûî dus nonkû</HisyeoText></td></tr>
         <tr><td>25</td><td><HisyeoText kind='latin'>dûî dus tîû</HisyeoText></td></tr>
         <tr><td>26</td><td><HisyeoText kind='latin'>dûî dus toû</HisyeoText></td></tr>
         <tr><td>27</td><td><HisyeoText kind='latin'>dûî dus xêtî</HisyeoText></td></tr>
         <tr><td>28</td><td><HisyeoText kind='latin'>dûî dus tukwos</HisyeoText></td></tr>
         <tr><td>29</td><td><HisyeoText kind='latin'>dûî dus eson</HisyeoText></td></tr>
-        <tr><td>30</td><td><HisyeoText kind='latin'>son dus</HisyeoText></td></tr>
-        <tr><td>31</td><td><HisyeoText kind='latin'>son dus kut</HisyeoText></td></tr>
-        <tr><td>32</td><td><HisyeoText kind='latin'>son dus dûî</HisyeoText></td></tr>
-        <tr><td>33</td><td><HisyeoText kind='latin'>son dus son</HisyeoText></td></tr>
-        <tr><td>34</td><td><HisyeoText kind='latin'>son dus nonkû</HisyeoText></td></tr>
-        <tr><td>35</td><td><HisyeoText kind='latin'>son dus tîû</HisyeoText></td></tr>
-        <tr><td>36</td><td><HisyeoText kind='latin'>son dus toû</HisyeoText></td></tr>
-        <tr><td>37</td><td><HisyeoText kind='latin'>son dus xêtî</HisyeoText></td></tr>
-        <tr><td>38</td><td><HisyeoText kind='latin'>son dus tukwos</HisyeoText></td></tr>
-        <tr><td>39</td><td><HisyeoText kind='latin'>son dus eson</HisyeoText></td></tr>
+        <tr><td>30</td><td><HisyeoText kind='latin'>niswî dus</HisyeoText></td></tr>
+        <tr><td>31</td><td><HisyeoText kind='latin'>niswî dus kut</HisyeoText></td></tr>
+        <tr><td>32</td><td><HisyeoText kind='latin'>niswî dus dûî</HisyeoText></td></tr>
+        <tr><td>33</td><td><HisyeoText kind='latin'>niswî dus niswî</HisyeoText></td></tr>
+        <tr><td>34</td><td><HisyeoText kind='latin'>niswî dus nonkû</HisyeoText></td></tr>
+        <tr><td>35</td><td><HisyeoText kind='latin'>niswî dus tîû</HisyeoText></td></tr>
+        <tr><td>36</td><td><HisyeoText kind='latin'>niswî dus toû</HisyeoText></td></tr>
+        <tr><td>37</td><td><HisyeoText kind='latin'>niswî dus xêtî</HisyeoText></td></tr>
+        <tr><td>38</td><td><HisyeoText kind='latin'>niswî dus tukwos</HisyeoText></td></tr>
+        <tr><td>39</td><td><HisyeoText kind='latin'>niswî dus eson</HisyeoText></td></tr>
         <tr><td>40</td><td><HisyeoText kind='latin'>nonkû dus</HisyeoText></td></tr>
         <tr><td>50</td><td><HisyeoText kind='latin'>tîû dus</HisyeoText></td></tr>
         <tr><td>60</td><td><HisyeoText kind='latin'>toû dus</HisyeoText></td></tr>
@@ -78,11 +78,11 @@ that you'll need to count all the way up to a trillion.
         <tr><td>90</td><td><HisyeoText kind='latin'>eson dus</HisyeoText></td></tr>
         <tr><td>100</td><td><HisyeoText kind='latin'>fîyên</HisyeoText></td></tr>
         <tr><td>101</td><td><HisyeoText kind='latin'>fîyên kut</HisyeoText></td></tr>
-        <tr><td>234</td><td><HisyeoText kind='latin'>dûî fîyên son dus nonkû</HisyeoText></td></tr>
+        <tr><td>234</td><td><HisyeoText kind='latin'>dûî fîyên niswî dus nonkû</HisyeoText></td></tr>
         <tr><td>1000</td><td><HisyeoText kind='latin'>elfû kut</HisyeoText></td></tr>
         <tr><td>1,000,000</td><td><HisyeoText kind='latin'>elfû dûî</HisyeoText></td></tr>
         <tr><td>1,999</td><td><HisyeoText kind='latin'>elfû kut,eson fîyên eson dus eson</HisyeoText></td></tr>
-        <tr><td>1,234,567</td><td><HisyeoText kind='latin'>elfû dûî, dûî fîyên son dus nonkû elfû kut, tîû fîyên toû dus xêtî</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='latin'>elfû dûî, dûî fîyên niswî dus nonkû elfû kut, tîû fîyên toû dus xêtî</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -98,7 +98,7 @@ that you'll need to count all the way up to a trillion.
         <tr><td>0</td><td><HisyeoText kind='abugida'>xûnyu</HisyeoText></td></tr>
         <tr><td>1</td><td><HisyeoText kind='abugida'>kut</HisyeoText></td></tr>
         <tr><td>2</td><td><HisyeoText kind='abugida'>dûî</HisyeoText></td></tr>
-        <tr><td>3</td><td><HisyeoText kind='abugida'>son</HisyeoText></td></tr>
+        <tr><td>3</td><td><HisyeoText kind='abugida'>niswî</HisyeoText></td></tr>
         <tr><td>4</td><td><HisyeoText kind='abugida'>nonkû</HisyeoText></td></tr>
         <tr><td>5</td><td><HisyeoText kind='abugida'>tîû</HisyeoText></td></tr>
         <tr><td>6</td><td><HisyeoText kind='abugida'>toû</HisyeoText></td></tr>
@@ -118,23 +118,23 @@ that you'll need to count all the way up to a trillion.
         <tr><td>20</td><td><HisyeoText kind='abugida'>dûî dus</HisyeoText></td></tr>
         <tr><td>21</td><td><HisyeoText kind='abugida'>dûî dus kut</HisyeoText></td></tr>
         <tr><td>22</td><td><HisyeoText kind='abugida'>dûî dus dûî</HisyeoText></td></tr>
-        <tr><td>23</td><td><HisyeoText kind='abugida'>dûî dus son</HisyeoText></td></tr>
+        <tr><td>23</td><td><HisyeoText kind='abugida'>dûî dus niswî</HisyeoText></td></tr>
         <tr><td>24</td><td><HisyeoText kind='abugida'>dûî dus nonkû</HisyeoText></td></tr>
         <tr><td>25</td><td><HisyeoText kind='abugida'>dûî dus tîû</HisyeoText></td></tr>
         <tr><td>26</td><td><HisyeoText kind='abugida'>dûî dus toû</HisyeoText></td></tr>
         <tr><td>27</td><td><HisyeoText kind='abugida'>dûî dus xêtî</HisyeoText></td></tr>
         <tr><td>28</td><td><HisyeoText kind='abugida'>dûî dus tukwos</HisyeoText></td></tr>
         <tr><td>29</td><td><HisyeoText kind='abugida'>dûî dus eson</HisyeoText></td></tr>
-        <tr><td>30</td><td><HisyeoText kind='abugida'>son dus</HisyeoText></td></tr>
-        <tr><td>31</td><td><HisyeoText kind='abugida'>son dus kut</HisyeoText></td></tr>
-        <tr><td>32</td><td><HisyeoText kind='abugida'>son dus dûî</HisyeoText></td></tr>
-        <tr><td>33</td><td><HisyeoText kind='abugida'>son dus son</HisyeoText></td></tr>
-        <tr><td>34</td><td><HisyeoText kind='abugida'>son dus nonkû</HisyeoText></td></tr>
-        <tr><td>35</td><td><HisyeoText kind='abugida'>son dus tîû</HisyeoText></td></tr>
-        <tr><td>36</td><td><HisyeoText kind='abugida'>son dus toû</HisyeoText></td></tr>
-        <tr><td>37</td><td><HisyeoText kind='abugida'>son dus xêtî</HisyeoText></td></tr>
-        <tr><td>38</td><td><HisyeoText kind='abugida'>son dus tukwos</HisyeoText></td></tr>
-        <tr><td>39</td><td><HisyeoText kind='abugida'>son dus eson</HisyeoText></td></tr>
+        <tr><td>30</td><td><HisyeoText kind='abugida'>niswî dus</HisyeoText></td></tr>
+        <tr><td>31</td><td><HisyeoText kind='abugida'>niswî dus kut</HisyeoText></td></tr>
+        <tr><td>32</td><td><HisyeoText kind='abugida'>niswî dus dûî</HisyeoText></td></tr>
+        <tr><td>33</td><td><HisyeoText kind='abugida'>niswî dus niswî</HisyeoText></td></tr>
+        <tr><td>34</td><td><HisyeoText kind='abugida'>niswî dus nonkû</HisyeoText></td></tr>
+        <tr><td>35</td><td><HisyeoText kind='abugida'>niswî dus tîû</HisyeoText></td></tr>
+        <tr><td>36</td><td><HisyeoText kind='abugida'>niswî dus toû</HisyeoText></td></tr>
+        <tr><td>37</td><td><HisyeoText kind='abugida'>niswî dus xêtî</HisyeoText></td></tr>
+        <tr><td>38</td><td><HisyeoText kind='abugida'>niswî dus tukwos</HisyeoText></td></tr>
+        <tr><td>39</td><td><HisyeoText kind='abugida'>niswî dus eson</HisyeoText></td></tr>
         <tr><td>40</td><td><HisyeoText kind='abugida'>nonkû dus</HisyeoText></td></tr>
         <tr><td>50</td><td><HisyeoText kind='abugida'>tîû dus</HisyeoText></td></tr>
         <tr><td>60</td><td><HisyeoText kind='abugida'>toû dus</HisyeoText></td></tr>
@@ -143,11 +143,11 @@ that you'll need to count all the way up to a trillion.
         <tr><td>90</td><td><HisyeoText kind='abugida'>eson dus</HisyeoText></td></tr>
         <tr><td>100</td><td><HisyeoText kind='abugida'>fîyên</HisyeoText></td></tr>
         <tr><td>101</td><td><HisyeoText kind='abugida'>fîyên kut</HisyeoText></td></tr>
-        <tr><td>234</td><td><HisyeoText kind='abugida'>dûî fîyên son dus nonkû</HisyeoText></td></tr>
+        <tr><td>234</td><td><HisyeoText kind='abugida'>dûî fîyên niswî dus nonkû</HisyeoText></td></tr>
         <tr><td>1000</td><td><HisyeoText kind='abugida'>elfû kut</HisyeoText></td></tr>
         <tr><td>1,000,000</td><td><HisyeoText kind='abugida'>elfû dûî</HisyeoText></td></tr>
         <tr><td>1,999</td><td><HisyeoText kind='abugida'>elfû kut,eson fîyên eson dus eson</HisyeoText></td></tr>
-        <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>elfû dûî, dûî fîyên son dus nonkû elfû kut, tîû fîyên toû dus xêtî</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>elfû dûî, dûî fîyên niswî dus nonkû elfû kut, tîû fîyên toû dus xêtî</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -167,7 +167,7 @@ These are called **Cardinal Numbers**. You can supply any amount of number words
 here and they follow the rules shown above to generate their value or amount.
 
 <HisyeoTabs>
-  <p>dûî fîyên son hôfezî "two hundred and three cows"</p>
+  <p>dûî fîyên niswî hôfezî "two hundred and three cows"</p>
 </HisyeoTabs>
 
 If you specify only the number 1 (kut), it acts like the indefinite article
@@ -221,7 +221,7 @@ Any series of numbers can be an ordinal as long as they appear on the right-hand
 side of a noun phrase.
 
 <HisyeoTabs>
-  <p>niwos son xe hoî xîmol "third house on the left"</p>
+  <p>niwos niswî xe hoî xîmol "third house on the left"</p>
 </HisyeoTabs>
 
 As you'll see in the next section, this ordinal-on-the-right usage how we
@@ -295,7 +295,7 @@ ordinal numbers that were shown above.
 | :-------- | :------------------------------------------------ | :-------------------------------------------------- |
 | January   | <HisyeoText kind='latin'>wuto kut</HisyeoText>    | <HisyeoText kind='abugida'>wuto kut</HisyeoText>    |
 | February  | <HisyeoText kind='latin'>wuto dûî</HisyeoText>    | <HisyeoText kind='abugida'>wuto dûî</HisyeoText>    |
-| March     | <HisyeoText kind='latin'>wuto son</HisyeoText>    | <HisyeoText kind='abugida'>wuto son</HisyeoText>    |
+| March     | <HisyeoText kind='latin'>wuto niswî</HisyeoText>    | <HisyeoText kind='abugida'>wuto niswî</HisyeoText>    |
 | April     | <HisyeoText kind='latin'>wuto nonkû</HisyeoText>  | <HisyeoText kind='abugida'>wuto nonkû</HisyeoText>  |
 | May       | <HisyeoText kind='latin'>wuto tîû</HisyeoText>    | <HisyeoText kind='abugida'>wuto tîû</HisyeoText>    |
 | June      | <HisyeoText kind='latin'>wuto toû</HisyeoText>    | <HisyeoText kind='abugida'>wuto toû</HisyeoText>    |
@@ -316,9 +316,9 @@ WIP Translation
 :::
 
 <HisyeoTabs>
-  <p>yûnyoû son dus lono û wuto eson,</p>
+  <p>yûnyoû niswî dus lono û wuto eson,</p>
   <p>wuto nonkû, wuto toû, ûn wuto ônsu,</p>
-  <p>û môî dîzel yûnyoû son dus kut,</p>
+  <p>û môî dîzel yûnyoû niswî dus kut,</p>
   <p>û yôk wuto dûî xe lon dûî dus tukwos lono,</p>
   <p>lêkin hoî ûsên zoston xe dî hoî xokôn ûsên nonkû,</p>
   <p>û wuto dûî yûnyoû eswen kut lono</p>
@@ -351,9 +351,9 @@ relative clause is used to treat the following phrase as an
 [appositive](https://en.wikipedia.org/wiki/Apposition).
 
 <HisyeoTabs>
-  <p>lono ôfo li lono kut yê wuto son.
+  <p>lono ôfo li lono kut yê wuto niswî.
      <em>"Today is the March 1st"</em></p>
-  <p>lono kon lôzîc nîûn li lono mîhûon xe li lono ziyôn yê wuto tîû. 
+  <p>lono kon lôzîc nîo li lono mîhûon xe li lono ziyôn yê wuto tîû. 
      <em>"His birthday is Tuesday, May 14th"</em></p>
 </HisyeoTabs>
 
@@ -366,13 +366,13 @@ recent date, you can often just mention the final segment.
 
 <HisyeoTabs>
   <p>dus eson xêtî dus xêtî&emsp;<em>1977</em></p>
-  <p>son xûnyu son&emsp;<em>303</em></p>
+  <p>niswî xûnyu niswî&emsp;<em>303</em></p>
 </HisyeoTabs>
       
 To say dates in "BC" or "BCE", use the phrase yê ilik zizime sodolun.
 
 <HisyeoTabs>
-  <p>kôson sî sinsî Lômo hoî xêtî tîû dus son yê ilik zizime sodolun.
+  <p>kôson sî sinsî Lômo hoî xêtî tîû dus niswî yê ilik zizime sodolun.
      <em>Rome was built in 753 BCE.</em></p>
 </HisyeoTabs>
 
@@ -381,7 +381,7 @@ in addition to the date.
 
 <HisyeoTabs>
   <p>noyo
-     hoî lono zîngu xe li lono kînsê yê wuto son,
+     hoî lono zîngu xe li lono kînsê yê wuto niswî,
      li cok mût niwos.
      <em>Friday, the 15th of March, I am departing for home.</em></p>
 </HisyeoTabs>
@@ -401,7 +401,7 @@ to return to the main sentence clause for the remaining consituents.
         <dd><HisyeoText kind='latin'>noyo yûnyoû dûî siskin moskûl ûn kut siskin wohî.</HisyeoText></dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='latin'>nîûn li nokdo zik.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>nîo li nokdo zik.</HisyeoText></dd>
         <dd><em>How old are they?</em></dd>
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='latin'>siskin wohî noyo Somonvo li ônsu ûsên .</HisyeoText></dd>
@@ -425,7 +425,7 @@ to return to the main sentence clause for the remaining consituents.
         <dd><HisyeoText kind='abugida'>noyo yûnyoû dûî siskin moskûl ûn kut siskin wohî.</HisyeoText></dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='abugida'>nîûn li nokdo zik.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>nîo li nokdo zik.</HisyeoText></dd>
         <dd><em>How old are they?</em></dd>
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='abugida'>siskin wohî noyo Somonvo li ônsu ûsên .</HisyeoText></dd>
@@ -509,7 +509,7 @@ normal approach for creating plurality: provide the number words in the
 determiner slot (left side of the head word).
 
 <HisyeoTabs>
-  <p>nîmû yûnyoû son suhot&emsp;<em>"You have three hours"</em></p>
+  <p>nîmû yûnyoû niswî suhot&emsp;<em>"You have three hours"</em></p>
   <p>tûu ulyô buswen kut suhot&emsp;<em>"That task needs an hour"</em></p>
 </HisyeoTabs>
 
@@ -544,7 +544,7 @@ clarity, let's use the agentive verb noun particle to create a meaning of
 
 <HisyeoTabs>
   <p>hondon li ônî kut sokofû yê dî folo môî et yê zomî.&emsp;<em>"The family is the most basic unit of society."</em></p>
-  <p>kûngîyo ondo xe li êo funlît ôlê cizî mût dûî yodo son ônî kut.&emsp;<em>"The company plans to split into two or three units."</em></p>
+  <p>kûngîyo ondo xe li êo funlît ôlê cizî mût dûî yodo niswî ônî kut.&emsp;<em>"The company plans to split into two or three units."</em></p>
 </HisyeoTabs>
 
 Other than the time words, the rest of the measurement units are done by just
@@ -584,7 +584,7 @@ milligrams.
 > —Casey Seiden, Verywell Health, 3 May 2024
 
 <HisyeoTabs>
-  <p>bi nulto bêsnêhot fos umo dês xonluk mokon zôhûn doî gitno dus tîû ûn son dus tîû ônî kut yê kûsowî hoî xokôn lono lêkin mîkdol yê êto umo Umelikin li bûzôk onô</p>
+  <p>bi nulto bêsnêhot fos umo dês xonluk mokon zôhûn doî gitno dus tîû ûn niswî dus tîû ônî kut yê kûsowî hoî xokôn lono lêkin mîkdol yê êto umo Umelikin li bûzôk onô</p>
 </HisyeoTabs>
 
 ### Length/Width/Height
