--- a/docs/reference/sentences.mdx
+++ b/docs/reference/sentences.mdx
@@ -91,7 +91,7 @@ sentences that hinge on a change in verb but there are ways around it.
 
 <HisyeoTabs>
     <p>nîmû fôlun xe tûu kon dodê yodo kon xîkô ko.&emsp;<em>"Do you want to go swimming or flying?"</em></p>
-    <p>nîûn yûnyoû mokon yodo îskô ko.&emsp;<em>"Do they have food or drink?"</em></p>
+    <p>nîo yûnyoû mokon yodo îskô ko.&emsp;<em>"Do they have food or drink?"</em></p>
     <p>mênyûu onô bi ôhêl bi môcîbo kelo kelo kôto hoî bitûn mûlû. &emsp;<em>"The kids were playing and talking all night."</em></p>
 </HisyeoTabs>
 
@@ -128,7 +128,7 @@ A simple sentence consists of a single independent clause with no dependent
 clauses.
 
 <HisyeoTabs>
-    <p>nîûn mokon sî yoûtî kûôxi.&emsp;<em>He ate some fruit.</em></p>
+    <p>nîo mokon sî yoûtî kûôxi.&emsp;<em>He ate some fruit.</em></p>
     <p>û oûtô gîsgûl onô li kobût.&emsp;<em>The bicycle is broken.</em></p>
     <p>hoî lono mîhûon û noyo cînlî sî dênêmêk kîôsô noyo.&emsp;<em>On Wednesday, I had my athletic exam.</em></p>
 </HisyeoTabs>
@@ -139,9 +139,9 @@ A compound sentence consists of multiple independent clauses with no dependent
 clauses. These clauses are joined together using conjunctions.
 
 <HisyeoTabs>
-    <p>nîûn îskô sî yoûtî xîmu lêkin bi môcîbo fôlun xe îskô eswen.&emsp;<em>He drank some water but was still thirsty.</em></p>
-    <p>nîûn li sî gîk hoî niwos nîûn ûn li sî conzodo.&emsp;<em>She got home and went to sleep.</em></p>
-    <p>li bôkbûn bînê nîûn wuîtsî cizî hoî sokofû sêl onô.&emsp;<em>It was storming so he stayed in the basement.</em></p>
+    <p>nîo îskô sî yoûtî xîmu lêkin bi môcîbo fôlun xe îskô eswen.&emsp;<em>He drank some water but was still thirsty.</em></p>
+    <p>nîo li sî gîk hoî niwos nîo ûn li sî conzodo.&emsp;<em>She got home and went to sleep.</em></p>
+    <p>li bôkbûn bînê nîo wuîtsî cizî hoî sokofû sêl onô.&emsp;<em>It was storming so he stayed in the basement.</em></p>
     <p>nû kôî li lô mût gufuyo kon mokon yodo û nû kôî côûfon hoî niwos nû.&emsp;<em>We can go to the restuarant or make dinner at home.</em></p>
 </HisyeoTabs>
 
