--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -34,7 +34,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>0</p></td><td><HisyeoText kind='latin'>xûnyu</HisyeoText></td></tr>
         <tr><td><p>1</p></td><td><HisyeoText kind='latin'>kut</HisyeoText></td></tr>
         <tr><td><p>2</p></td><td><HisyeoText kind='latin'>dûî</HisyeoText></td></tr>
-        <tr><td><p>3</p></td><td><HisyeoText kind='latin'>son</HisyeoText></td></tr>
+        <tr><td><p>3</p></td><td><HisyeoText kind='latin'>niswî</HisyeoText></td></tr>
         <tr><td><p>4</p></td><td><HisyeoText kind='latin'>nonkû</HisyeoText></td></tr>
         <tr><td><p>5</p></td><td><HisyeoText kind='latin'>tîû</HisyeoText></td></tr>
         <tr><td><p>6</p></td><td><HisyeoText kind='latin'>toû</HisyeoText></td></tr>
@@ -54,10 +54,10 @@ by using the below method of assembling parts of a number:
         <tr><td><p>20</p></td><td><HisyeoText kind='latin'>dûî dus</HisyeoText></td></tr>
         <tr><td><p>21</p></td><td><HisyeoText kind='latin'>dûî dus kut</HisyeoText></td></tr>
         <tr><td><p>22</p></td><td><HisyeoText kind='latin'>dûî dus dûî</HisyeoText></td></tr>
-        <tr><td><p>23</p></td><td><HisyeoText kind='latin'>dûî dus son</HisyeoText></td></tr>
+        <tr><td><p>23</p></td><td><HisyeoText kind='latin'>dûî dus niswî</HisyeoText></td></tr>
         <tr><td><p>100</p></td><td><HisyeoText kind='latin'>fîyên</HisyeoText></td></tr>
         <tr><td><p>101</p></td><td><HisyeoText kind='latin'>fîyên kut</HisyeoText></td></tr>
-        <tr><td><p>234</p></td><td><HisyeoText kind='latin'>dûî fîyên son dus nonkû</HisyeoText></td></tr>
+        <tr><td><p>234</p></td><td><HisyeoText kind='latin'>dûî fîyên niswî dus nonkû</HisyeoText></td></tr>
         <tr><td><p>1000</p></td><td><HisyeoText kind='latin'>elfû kut</HisyeoText></td></tr>
         <tr><td><p>1,000,000</p></td><td><HisyeoText kind='latin'>elfû dûî</HisyeoText></td></tr>
         <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>elfû kut, eson fîyên eson dus eson</HisyeoText></td></tr>
@@ -69,7 +69,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>0</p></td><td><HisyeoText kind='abugida'>xûnyu</HisyeoText></td></tr>
         <tr><td><p>1</p></td><td><HisyeoText kind='abugida'>kut</HisyeoText></td></tr>
         <tr><td><p>2</p></td><td><HisyeoText kind='abugida'>dûî</HisyeoText></td></tr>
-        <tr><td><p>3</p></td><td><HisyeoText kind='abugida'>son</HisyeoText></td></tr>
+        <tr><td><p>3</p></td><td><HisyeoText kind='abugida'>niswî</HisyeoText></td></tr>
         <tr><td><p>4</p></td><td><HisyeoText kind='abugida'>nonkû</HisyeoText></td></tr>
         <tr><td><p>5</p></td><td><HisyeoText kind='abugida'>tîû</HisyeoText></td></tr>
         <tr><td><p>6</p></td><td><HisyeoText kind='abugida'>toû</HisyeoText></td></tr>
@@ -89,10 +89,10 @@ by using the below method of assembling parts of a number:
         <tr><td><p>20</p></td><td><HisyeoText kind='abugida'>dûî dus</HisyeoText></td></tr>
         <tr><td><p>21</p></td><td><HisyeoText kind='abugida'>dûî dus kut</HisyeoText></td></tr>
         <tr><td><p>22</p></td><td><HisyeoText kind='abugida'>dûî dus dûî</HisyeoText></td></tr>
-        <tr><td><p>23</p></td><td><HisyeoText kind='abugida'>dûî dus son</HisyeoText></td></tr>
+        <tr><td><p>23</p></td><td><HisyeoText kind='abugida'>dûî dus niswî</HisyeoText></td></tr>
         <tr><td><p>100</p></td><td><HisyeoText kind='abugida'>fîyên</HisyeoText></td></tr>
         <tr><td><p>101</p></td><td><HisyeoText kind='abugida'>fîyên kut</HisyeoText></td></tr>
-        <tr><td><p>234</p></td><td><HisyeoText kind='abugida'>dûî fîyên son dus nonkû</HisyeoText></td></tr>
+        <tr><td><p>234</p></td><td><HisyeoText kind='abugida'>dûî fîyên niswî dus nonkû</HisyeoText></td></tr>
         <tr><td><p>1000</p></td><td><HisyeoText kind='abugida'>elfû kut</HisyeoText></td></tr>
         <tr><td><p>1,000,000</p></td><td><HisyeoText kind='abugida'>elfû dûî</HisyeoText></td></tr>
         <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>elfû kut, eson fîyên eson dus eson</HisyeoText></td></tr>
@@ -104,8 +104,8 @@ Add one of these *before* your noun and you have provided a **quantity determine
 cardinal number).
 
 <HisyeoTabs>
-  <p>son sûtûô li cok sûn zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
-  <p>nû buswen son dus tîû êfun oxon xe bîek ni sûwît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
+  <p>niswî sûtûô li cok sûn zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
+  <p>nû buswen niswî dus tîû êfun oxon xe bîek ni sûwît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -118,7 +118,7 @@ modifiers) and it will represent a relative position of an item in a sequence
 (an ordinal number).
 
 <HisyeoTabs>
-  <p>li nomû son xe sûn xîmol, û sûko noyo.&emsp;<em>"The third tree from the left is my favorite."</em></p>
+  <p>li nomû niswî xe sûn xîmol, û sûko noyo.&emsp;<em>"The third tree from the left is my favorite."</em></p>
   <p>noyo li umo nonkû xe li cok.&emsp;<em>"I was the fourth person to leave."</em></p>
 </HisyeoTabs>
 
@@ -136,7 +136,7 @@ represent the number of times something is to be multiplied.
 
 <HisyeoTabs>
   <p>boholon yûnyoû zinkon ônî dûî.&emsp;<em>"The closet has double doors."</em></p>
-  <p>nîûn li kîôsô êto kôî tûu zoston ônî nonkû bi obunyun.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
+  <p>nîo li kîôsô êto kôî tûu zoston ônî nonkû bi obunyun.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
 </HisyeoTabs>
 
 ### Adverbial
@@ -157,8 +157,8 @@ details, you would tack on a <HisyeoWord is='xokôn'/> at the end of a noun
 phrase. Here's a non-distributive action and contrasting distributive one:
 
 <HisyeoTabs>
-  <p>umo Tom û umo Zil okôt son dibo.&emsp;<em>"Tom and Jill carried three boxes."</em></p>
-  <p>umo Tom û umo Zil okôt son dibo xokôn.&emsp;<em>"Tom and Jill carried three boxes each."</em></p>
+  <p>umo Tom û umo Zil okôt niswî dibo.&emsp;<em>"Tom and Jill carried three boxes."</em></p>
+  <p>umo Tom û umo Zil okôt niswî dibo xokôn.&emsp;<em>"Tom and Jill carried three boxes each."</em></p>
 </HisyeoTabs>
 
 In order to specify that something is double the degree of the associated
@@ -166,15 +166,15 @@ noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokôn'/>.
 
 <HisyeoTabs>
     <p>motûo wohî noyo bi xokôn dûî dîyondê hôn xe bi elentêt li êo infultîn ônî dûstu wokût.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
-    <p>li sonkon û xe besol zinkon, ûn bi xokôn son hôn bitûn.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
+    <p>li sonkon û xe besol zinkon, ûn bi xokôn niswî hôn bitûn.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
     <p>lolû nîmû oncêmon êo xokôn dûî tônkô hôn doho noyo.&emsp;<em>Your words feel doubly hurtful given my sacrifices.</em></p>
 </HisyeoTabs>
 
 ### Fractional
 
 <HisyeoTabs>
-    <p>noyo ke dôstoc son fun son dus tîû îcwon noyo.&emsp;<em>I will receive three thirty-fifths of my inheritance.</em></p>
-    <p>fîkî yê sobûnî et onô li sî nîôk lon son ûn fun son.&emsp;<em>The disease rate has increased by 3 and one-third.</em></p>
+    <p>noyo ke dôstoc niswî fun niswî dus tîû îcwon noyo.&emsp;<em>I will receive three thirty-fifths of my inheritance.</em></p>
+    <p>fîkî yê sobûnî et onô li sî nîôk lon niswî ûn fun niswî.&emsp;<em>The disease rate has increased by 3 and one-third.</em></p>
 </HisyeoTabs>
 
 ## Relative
@@ -228,7 +228,7 @@ the quantity is an adequate amount for their purposes.
 <HisyeoTabs>
     <p>noyo bi ôhêl îskô sî zôtêstô îskô kîkôlô ûlzo hoî lono ôfo.&emsp;<em>"I've already had enough coffee today."</em></p>
     <p>nîmû mokon sî otikon bîek sûwît hoî kôndodû onô.&emsp;<em>"You ate too much cake at the party."</em></p>
-    <p>nîûn moskûl li bûzôk môfî hôn xe hobîyô mût nîûn wohî.&emsp;<em>"He lacks the courage to tell her."</em></p>
+    <p>nîo moskûl li bûzôk môfî hôn xe hobîyô mût nîo wohî.&emsp;<em>"He lacks the courage to tell her."</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip/>
