--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -110,9 +110,9 @@ of the relative clause which is then dropped and implied to refer to the nucleus
 
 <HisyeoTabs>
     <p>umo fos noyo cûdo înbolî mût, dî sî xe monodo.&emsp;<em>"The person that I gave a flower to came to visit."</em></p>
-    <p>nîûn li umo fos dêko noyo û.&emsp;<em>"They are the person who saw me."</em></p>
+    <p>nîo li umo fos dêko noyo û.&emsp;<em>"They are the person who saw me."</em></p>
     <p>îlê fos noyo niwos, li nokdo êto.&emsp;<em>"The house in which I live is very old."</em></p>
-    <p>gûexo onô fos nîûn toswîl sî nênko, li mûlû lôîcôk.&emsp;<em>"The war that he painted because of is finally over."</em></p>
+    <p>gûexo onô fos nîo toswîl sî nênko, li mûlû lôîcôk.&emsp;<em>"The war that he painted because of is finally over."</em></p>
 </HisyeoTabs>
 
 When you want to organize your relative clause in a topical manner, the
@@ -125,7 +125,7 @@ possessed by that third party.
 
 <HisyeoTabs>
     <p><b>ôfo</b> li non fos noyo fôlun xe mônîso <b>ôfo</b> mût nîmû.&emsp;<em>"This is the video that I wanted to show you."</em></p>
-    <p>li sî yôûlî êto û umo <b>onô</b> fos nîûn kôto sî <b>onô</b>.&emsp;<em>"The person they spoke to was really helpful."</em></p>
+    <p>li sî yôûlî êto û umo <b>onô</b> fos nîo kôto sî <b>onô</b>.&emsp;<em>"The person they spoke to was really helpful."</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip/>
