--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -184,17 +184,17 @@ differentiation and causation).
   <p>noyo dôstoc lîbû in lufono sûn siskin moskûl noyo.&emsp;<em>I got a letter from my brother.</em></p>
   <p>nîmû kôî dôstoc yôk fisun nêôs sûn nec ônî tûek nucoto.&emsp;<em>You can't get all your news from the Internet.</em></p>
   <p>tômôs ôfo sûn dus eson tukwos dus.&emsp;<em>This manuscript is from the 1980s.</em></p>
-  <p>nîûn yûnyoû sî tômôs xe hoî zomo mulô sûn sokofû mût deku.&emsp;<em>He had books piled from floor to ceiling.</em></p>
-  <p>nîûn li sî cok hoî lono xobêk sûn sinsî Xikogô.&emsp;<em>He departed yesterday from Chicago.</em></p>
+  <p>nîo yûnyoû sî tômôs xe hoî zomo mulô sûn sokofû mût deku.&emsp;<em>He had books piled from floor to ceiling.</em></p>
+  <p>nîo li sî cok hoî lono xobêk sûn sinsî Xikogô.&emsp;<em>He departed yesterday from Chicago.</em></p>
   <p>kûu bono bi elentêt sûn bêlêtê.&emsp;<em>Face away from the wall!</em></p>
   <p>lono kon wêloi sûn suhot eson mût suhot tîû.<em>The working day runs from 9 am to 5 pm.</em></p>
   <p>kôî wedo oxon doînbî sûn lono dus xêtî yê wuto xêtî.&emsp;<em>Tickets are available from 17th July.</em></p>
   <p>dûstu tônkô nîmû sûn kut mût dus.&emsp;<em>Rate your pain from 1 to 10.</em></p>
   <p>kûu socok xe kôto mîkdol sûn kut.&emsp;<em>Start counting from 1.</em></p>
   <p>nîmû kôî bêûdo ozûul sûn sôhoûk mût kon cukto.&emsp;<em>You can study anything from math to literature.</em></p>
-  <p>kûu dênêmêk xe dêko ni sûn bindû nîûn yê dêko.&emsp;<em>Try to see it from his point of view.</em></p>
+  <p>kûu dênêmêk xe dêko ni sûn bindû nîo yê dêko.&emsp;<em>Try to see it from his point of view.</em></p>
   <p>sûn mulô yê niwos kûon û nîmû bi yoûtî kôî dêko bûmî yê cênbô môî.&emsp;<em>From the top of the lighthouse you can just see the mainland.</em></p>
-  <p>dûî dus sûn son dus kut dî ônsu.&emsp;<em>20 from 31 leaves 11.</em></p>
+  <p>dûî dus sûn niswî dus kut dî ônsu.&emsp;<em>20 from 31 leaves 11.</em></p>
   <p>lîbû gelmis yê foko mefûs lono bi môcîbo kôs xe li mefûs sûn lozô yê bînton lono.&emsp;<em>A parasol protects from the sun's rays.</em></p>
   <p>kôson ni sûn ûlôgun nulun sêlbô sofîn.&emsp;<em>It's made from pure gold.</em></p>
 </HisyeoTabs>
@@ -224,7 +224,7 @@ proper way to formulate the desired semantic meaning.
 <HisyeoTabs>
   <p>umo kôsmô li lô mût mûêsî.&emsp;<em>The astronauts headed for the moon.</em></p>
   <p>kûu li lô bi fîkî mût bûmî tôxûtsi.&emsp;<em>Run for the hills!</em></p>
-  <p>nîûn li lô mût zinkon hôn wokût fos nîûn bunyentoc sî hoî.&emsp;<em>He was headed for the door when he remembered.</em></p>
+  <p>nîo li lô mût zinkon hôn wokût fos nîo bunyentoc sî hoî.&emsp;<em>He was headed for the door when he remembered.</em></p>
 </HisyeoTabs>
 2. ✅ Directed at; intended to belong to.
 <HisyeoTabs>
@@ -251,13 +251,13 @@ proper way to formulate the desired semantic meaning.
   <p>noî môî umo xe oxon bêsnêhot, kûu li êo lô bi mulô ôlê zûngô nîmû.&emsp;<em>All those for the motion, raise your hands.</em></p>
   <p>zik oxon mozûn bukû.&emsp;<em>Who's for ice-cream?</em></p>
   <p>noyo oxon xe li lô tô oûtô kîskô.&emsp;<em>I'm for going by train.</em></p>
-  <p>dus gôcîdon sî oxon ûn son dên.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
+  <p>dus gôcîdon sî oxon ûn niswî dên.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
 </HisyeoTabs>
 7. ⛔ Because of. 
 <HisyeoTabs>
-  <p>nîûn moskûl bît kôto yôk fos nîûn zûtô ni, ûn nênko ulyô û nîûn wohî bêmon yôk xe li yôûlî mût nîûn moskûl.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
-  <p>nîûn li xoînbo bi dêko bi xôn eswen nênko xe nocîdo sî bûgot.&emsp;<em>He looks better for having lost weight. (UK usage)</em></p>
-  <p>noyo sûko nîûn nênko êto môtîfô.&emsp;<em>I like her for lots of reasons.</em></p>
+  <p>nîo moskûl bît kôto yôk fos nîo zûtô ni, ûn nênko ulyô û nîo wohî bêmon yôk xe li yôûlî mût nîo moskûl.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
+  <p>nîo li xoînbo bi dêko bi xôn eswen nênko xe nocîdo sî bûgot.&emsp;<em>He looks better for having lost weight. (UK usage)</em></p>
+  <p>noyo sûko nîo nênko êto môtîfô.&emsp;<em>I like her for lots of reasons.</em></p>
 </HisyeoTabs>
 8. ✅ Intended to cure, remove or counteract; in order to cure, remove or counteract.
 <HisyeoTabs>
@@ -266,8 +266,8 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 9. ⛔ Over (a period of time). 
 <HisyeoTabs>
-  <p>noyo niwos hoî ôfo lon son ûsên.&emsp;<em>I've lived here for three years.</em></p>
-  <p>nîûn kôntêsto lon yoûtî lono hôn nûyo kon cukto mîtetên.&emsp;<em>They fought for days over a silly pencil.</em></p>
+  <p>noyo niwos hoî ôfo lon niswî ûsên.&emsp;<em>I've lived here for three years.</em></p>
+  <p>nîo kôntêsto lon yoûtî lono hôn nûyo kon cukto mîtetên.&emsp;<em>They fought for days over a silly pencil.</em></p>
 </HisyeoTabs>
 10. ⛔ Throughout or across (a distance in space). 
 <HisyeoTabs>
@@ -280,13 +280,13 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 12. ✅ On behalf of.
 <HisyeoTabs>
-  <p>noyo wedo cizî oxon nîûn.&emsp;<em>I will stand in for him.</em></p>
+  <p>noyo wedo cizî oxon nîo.&emsp;<em>I will stand in for him.</em></p>
   <p>noyo kôto oxon ônî bôklôn wîk.<em>I speak for the Prime Minister.</em></p>
 </HisyeoTabs>
 13. ⛔ In the role or capacity of; instead of; in place of.
 <HisyeoTabs>
   <p>noyo yôn dîncî yê kudûdo hûlû misli mîêbil kon conzodo.&emsp;<em>I used a hay bale for a bed.</em></p>
-  <p>nîûn yûnyoû ûnfûnô zîzîyo misli fos wedo dûuncît nîûn oxon ni.&emsp;<em>He's got a turnip for a brain.</em></p>
+  <p>nîo yûnyoû ûnfûnô zîzîyo misli fos wedo dûuncît nîo oxon ni.&emsp;<em>He's got a turnip for a brain.</em></p>
 </HisyeoTabs>
 14. ⛔ In exchange for; in correspondence or equivalence with. 
 <HisyeoTabs>
@@ -295,19 +295,19 @@ proper way to formulate the desired semantic meaning.
 15. ✅ In order to obtain or acquire.
 <HisyeoTabs>
   <p>noyo belêxu oxon mûlû xe hoî kônyêc kûngîyo yê lono cinôbu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
-  <p>nîûn bêûdo oxon cêo yê mulô êto.&emsp;<em>He's going for his doctorate.</em></p>
+  <p>nîo bêûdo oxon cêo yê mulô êto.&emsp;<em>He's going for his doctorate.</em></p>
   <p>nîmû fôlun xe li lô oxon îskô ûlzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
   <p>umo xe niwos hoî môî boxô yê kûôcyo Elofo, dîyondê sî umo Delfi oxon zuwobû.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
   <p>nîmû kôî li lô mût gufuyo oxon yoûtî hûwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
   <p>noyo wêko munî bi sôbo oxon oûtô.&emsp;<em>I'm saving up for a car.</em></p>
   <p>kûu motsi yôk oxon zuwobû.&emsp;<em>Don't wait for an answer.</em></p>
-  <p>nîûn sôlû mût nîmû oxon zik.&emsp;<em>What did he ask you for?</em></p>
+  <p>nîo sôlû mût nîmû oxon zik.&emsp;<em>What did he ask you for?</em></p>
 </HisyeoTabs>
 16. ⛔ By the standards of, usually with the implication that those standards are lower than one might otherwise expect; considering.
 <HisyeoTabs>
   <p>li ûsowo hôn wokût ni.&emsp;<em>Fair for its day.</em></p>
-  <p>nîûn li kîôsô hôn umo wohî nokdo.&emsp;<em>She's spry for an old lady.</em></p>
-  <p>nîûn li ofînê êto hôn dûî ûsên yê nokdo.&emsp;<em>He's very mature, for a two-year-old.</em></p>
+  <p>nîo li kîôsô hôn umo wohî nokdo.&emsp;<em>She's spry for an old lady.</em></p>
+  <p>nîo li ofînê êto hôn dûî ûsên yê nokdo.&emsp;<em>He's very mature, for a two-year-old.</em></p>
 </HisyeoTabs>
 17. ⛔ To be, or as being. 
 <HisyeoTabs>
@@ -315,7 +315,7 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 18. ⛔ (usually in the phrase 'for all') Despite, in spite of. 
 <HisyeoTabs>
-  <p>hôn môî kon bêûdo nîûn yê wîlûwo êto li yôk xoînbo û fos nîûn li colot êto.<em>For all his expensive education, he didn't seem very bright.</em></p>
+  <p>hôn môî kon bêûdo nîo yê wîlûwo êto li yôk xoînbo û fos nîo li colot êto.<em>For all his expensive education, he didn't seem very bright.</em></p>
 </HisyeoTabs>
 19. ✅ Indicating something desired or anticipated. 
 <HisyeoTabs>
@@ -330,19 +330,19 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
 <HisyeoTabs>
-  <p>somo mût nîûn oxon motûo motûo nîûn.&emsp;<em>He is named for his grandfather.</em></p>
+  <p>somo mût nîo oxon motûo motûo nîo.&emsp;<em>He is named for his grandfather.</em></p>
 </HisyeoTabs>
 22. ⛔ (UK) Due for or facing (a certain outcome or fate).
 <HisyeoTabs>
-  <p>nîûn li êo kobût bi mûlû ôlê mêdûson in ondo ulyô. nîûn bi îbûdû bono xe nocîdo wêloi nîûn lôîcôk.&emsp;<em>He totally screwed up that project. Now he's surely for the sack.</em></p>
+  <p>nîo li êo kobût bi mûlû ôlê mêdûson in ondo ulyô. nîo bi îbûdû bono xe nocîdo wêloi nîo lôîcôk.&emsp;<em>He totally screwed up that project. Now he's surely for the sack.</em></p>
 </HisyeoTabs>
 23. ⛔ (chiefly US) Out of; used to indicate a fraction, a ratio
 <HisyeoTabs>
-  <p>hôn ônî kut yê kon xobo boxô û umo Zônsi li sî son fun nonkû hoî lono.&emsp;<em>In terms of base hits, Jones was three for four on the day.</em></p>
+  <p>hôn ônî kut yê kon xobo boxô û umo Zônsi li sî niswî fun nonkû hoî lono.&emsp;<em>In terms of base hits, Jones was three for four on the day.</em></p>
 </HisyeoTabs>
 24. ⛔ (cricket) Used as part of a score to indicate the number of wickets that have fallen.
 <HisyeoTabs>
-  <p>hoî kônyêc yê kelo û kûôcyo Ingulindu li son fîyên tîû fun son.&emsp;<em>At close of play, England were 305 for 3.</em></p>
+  <p>hoî kônyêc yê kelo û kûôcyo Ingulindu li niswî fîyên tîû fun niswî.&emsp;<em>At close of play, England were 305 for 3.</em></p>
 </HisyeoTabs>
 25. ⛔ Used in various more-or-less idiomatic ways to construe individual verbs, indicating various semantic relationships such as target, purpose, result, etc.; see also the entries for individual phrasal verbs, e.g. ask for, look for, stand for, etc.
 <HisyeoTabs>
@@ -353,7 +353,7 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 26. ✅ (nonstandard) So (that), in order to
 <HisyeoTabs>
-  <p>nîûn gomî sî wokût kon wêloi xe gitno lono ûn bitûn, oxon fos nîûn kôî dôstoc eswen wokût otikon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
+  <p>nîo gomî sî wokût kon wêloi xe gitno lono ûn bitûn, oxon fos nîo kôî dôstoc eswen wokût otikon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
 </HisyeoTabs>
 
 :::
@@ -455,7 +455,7 @@ occur. In English, this represents some of the senses of the phrases "or so",
 "per", and "according to". 
 
 <HisyeoTabs>
-  <p>hoî môtô ilik onô û nîûn li sî tônkô môtô oldis fos dîzel kôto.&emsp;<em>He was burned in the fire or so they say.</em></p>
+  <p>hoî môtô ilik onô û nîo li sî tônkô môtô oldis fos dîzel kôto.&emsp;<em>He was burned in the fire or so they say.</em></p>
   <p>oldis yôcno kon kôson û foko ûnîdû bilît dî ûlgûkîn hoî dûî dus nonkû suhot.&emsp;<em>According to the directions, the glue takes 24 hours to dry.</em></p>
 </HisyeoTabs>
 
@@ -477,7 +477,7 @@ senses of the word "for" or "until".
 <HisyeoTabs>
   <p>noyo kôî dêko lon yoûtî ônî kut cênbô yê mônbili.&emsp;<em>"I can see for kilometres"</em></p>
   <p>nîmû li gô lon ûsên zik.&emsp;<em>"How old are you?"</em></p>
-  <p>nîûn kôntêsto tô kôto lon yoûtî lono hôn dôcuî.&emsp;<em>They argued for days over a toy.</em></p>
+  <p>nîo kôntêsto tô kôto lon yoûtî lono hôn dôcuî.&emsp;<em>They argued for days over a toy.</em></p>
 </HisyeoTabs>
 
 :::info The differences between the distance/duration role and the location/time role
@@ -492,8 +492,8 @@ specified is reached.
 <HisyeoTabs>
     <p>noyo li lô mût gufuyo hoî suhot tukwos yê bitûn xobêk.&emsp;<em>"I was going to the market at 8 o'clock last night."</em></p>
     <p>noyo li lô mût gufuyo lon suhot tukwos hoî bitûn xobêk.&emsp;<em>"I was going to the market until 8 o'clock last night."</em></p>
-    <p>nîûn bi fîkî li lô mût gîto kônyêc lon xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line until he saw the lemonade stand."</em></p>
-    <p>nîûn bi fîkî li lô mût gîto kônyêc hoî xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line at the time he saw the lemonade stand."</em></p>
+    <p>nîo bi fîkî li lô mût gîto kônyêc lon xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line until he saw the lemonade stand."</em></p>
+    <p>nîo bi fîkî li lô mût gîto kônyêc hoî xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line at the time he saw the lemonade stand."</em></p>
 </HisyeoTabs>
 
 To better understand why it's necessary to distinguish this from location/time,
@@ -565,7 +565,7 @@ it can also represent the English phrase "as if".
   <p>sî tûu cô kûnhîun bîs û umo moskûl nokdo misli xe ke zîgîl.&emsp;<em>"The old man stumbled, as if he were about to fall."</em></p>
   <p>golfon onô fos noyo oncêmon ni cihôû xe dêko non foko ôsôlê yê kônyêc wêxôn fêlcîn misli yôk ozûul fin fos noyo oncêmon sî hoî ôhêl.&emsp;<em>The disgust I felt after watching last weekend's horror movie was unlike anything I had felt before.</em></p>
   <p>umo Kiloûdîo bi xûnyu cokyen îskô fin cûbû misli yôk umo Filit fos poxô kon îskô cûbû bi cokyen li niwos dûî yê.&emsp;<em>Claudia hardly ever drinks beer or wine, unlike Phillip, for whom the bar is practically a second home.</em></p>
-  <p>xe li mûun, misli yôk nîûn&emsp;<em>Being late is unlike him.</em></p>
+  <p>xe li mûun, misli yôk nîo&emsp;<em>Being late is unlike him.</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
@@ -593,7 +593,7 @@ to the preceding noun. In English, this represents some of the senses of the
 word "of".
 
 <HisyeoTabs>
-  <p>nîûn bi xoînbo li fonmot yê kon oncêmon umo.&emsp;<em>"He seemed devoid of human feelings."</em></p>
+  <p>nîo bi xoînbo li fonmot yê kon oncêmon umo.&emsp;<em>"He seemed devoid of human feelings."</em></p>
   <p>bêmon in cukto onô kôî dî nîltûgu hoî ozûul wokût tô bêmon yê môî dûî zomo.&emsp;<em>"The contract can be terminated at any time with the agreement of both parties."</em></p>
 </HisyeoTabs>
 
@@ -846,7 +846,7 @@ from the attached genitive phrase. "out of", "away from" ,or simply "from" are
 equivalent English expressions.
 
 <HisyeoTabs>
-  <p>mônbili mônbili yê nîûn&emsp;<em>"far from them"</em> <small>(lit. far distance of them)</small></p>
+  <p>mônbili mônbili yê nîo&emsp;<em>"far from them"</em> <small>(lit. far distance of them)</small></p>
   <p>fonmot yê gos hônyo&emsp;<em>"clear from wild plants"</em> <small>(lit. absence of wild plants)</small></p>
 </HisyeoTabs>
 
@@ -883,13 +883,13 @@ genitive phrase must contain concepts of money, value or amount.
 
 <HisyeoTabs>
   <p>mokon sûwît yê dûî munî&emsp;<em>"candy for two dollars"</em> <small>(lit. sweet food of two monies)</small></p>
-  <p>son kûdu yê dus yônê&emsp;<em>"three horses worth ten goats"</em> <small>(lit. three horses of ten goats)</small></p>
+  <p>niswî kûdu yê dus yônê&emsp;<em>"three horses worth ten goats"</em> <small>(lit. three horses of ten goats)</small></p>
 </HisyeoTabs>
 
 You can clarify that a genitive relationship is Price/Value by using <HisyeoWord is='wîlûwo'/>:
 
 <HisyeoTabs>
-  <p>son kûdu yê wîlûwo yê dus yônê&emsp;<em>"three horses worth ten goats"</em> <small>(lit. three horses of ten goats)</small></p>
+  <p>niswî kûdu yê wîlûwo yê dus yônê&emsp;<em>"three horses worth ten goats"</em> <small>(lit. three horses of ten goats)</small></p>
 </HisyeoTabs>
 
 ---
