--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -73,7 +73,7 @@ frame the predicate of a question, it has the effect of asking for permission.
 
 <HisyeoTabs>
     <p>hoî ilik fos noyo li dês dêko, û noyo kôî dêko bi xôn êto.&emsp;<em>Before I was blind, I could see very well.</em></p>
-    <p>noyo gonîso fos nîûn kôî tûu ni hôn fos nîûn fôlun bi hokîkî.&emsp;<em>I think he could do it if he really wanted to.</em></p>
+    <p>noyo gonîso fos nîo kôî tûu ni hôn fos nîo fôlun bi hokîkî.&emsp;<em>I think he could do it if he really wanted to.</em></p>
     <p>noyo xîwon xe kôî li xîkô ze.&emsp;<em>I wish I could fly!</em></p>
     <p>noyo kôî yôn ôntôn tetêk mulô bi îlxîzuk ko.&emsp;<em>Could I borrow your coat?</em></p>
     <p>noyo kôî sityo hoî ulyô ko.&emsp;<em>May I sit there?</em></p>
@@ -84,7 +84,7 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>noyo kôî gomî bîek botuk sûwît fêlcîn.&emsp;<em>Might I take the last biscuit?</em></p>
     <p>nû kôî buswen fin xe li len eswen yoûtî cî.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
     <p>nîmû kôî tenkîn ulyô ko.&emsp;<em>Can you hear that?</em></p>
-    <p>nîûn kôî kôto tô hîskûnco Ingulic, Vulonsê, ûn Dôic.&emsp;<em>She can speak English, French, and German.</em></p>
+    <p>nîo kôî kôto tô hîskûnco Ingulic, Vulonsê, ûn Dôic.&emsp;<em>She can speak English, French, and German.</em></p>
 </HisyeoTabs>
 
 #### Conditional (*what would be*)
@@ -98,9 +98,9 @@ explicitly described or implied.
     <p>noyo bît yûbik xe li lô monodo.&emsp;<em>I would love to come and visit.</em></p>
     <p>kûu dêko bîek sûwît yê sobôlê xôn êto ze. noyo bît mokon môî ulyô bi mûlû ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
     <p>noyo mût nîmû bît sôlû xe sityo bi koli.&emsp;<em>I would ask you all to sit down.</em></p>
-    <p>noyo mût gonîso fos nîûn li sî cok bi ilik.&emsp;<em>I would imagine that they have already left.</em></p>
-    <p>hôn fos nîûn li kôxentê yê mefûs û nîûn bît bunyentoc sî xe besol zinkon onô.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
-    <p>nîûn bît li gô hoî sinsî Lundun bi îbûdû cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
+    <p>noyo mût gonîso fos nîo li sî cok bi ilik.&emsp;<em>I would imagine that they have already left.</em></p>
+    <p>hôn fos nîo li kôxentê yê mefûs û nîo bît bunyentoc sî xe besol zinkon onô.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
+    <p>nîo bît li gô hoî sinsî Lundun bi îbûdû cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
 </HisyeoTabs>
 
 :::info The different conditional classifications of English
@@ -138,7 +138,7 @@ because it's still in the future just the event has ended or the state has been
 surpassed.
 
 <HisyeoTabs>
-    <p>hôn fos nîûn bît sôlû mût noyo, û noyo ke fohoso bêsnêhot nîûn bi dîyondê êto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
+    <p>hôn fos nîo bît sôlû mût noyo, û noyo ke fohoso bêsnêhot nîo bi dîyondê êto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
     <p>hôn fos nîmû bît li êo foût, umo ke fisun êo ôlê nîmû.&emsp;<em>If you make a mistake, someone will let you know.</em></p>
     <p>hôn fos bît li hûzon cihoû lono mutyu ôfo, kûu li lô mût boxô noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
     <p>hôn fos nîmû bît li cok hoî îbûdû, û nîmû ke doîcêl oûtô kîskô nîmû lôîcôk.&emsp;<em>If you leave now, you will still catch your train.</em></p>
@@ -156,7 +156,7 @@ can either just drop to the First Conditional or use an adverb phrase with <Hisy
 in English, there's no need to encode the past tense (subjunctive) on the antecedent clause.
 
 <HisyeoTabs>
-    <p>hôn fos noyo bît sûko kôndodû, û noyo bît li gô hoî eswen nîûn.&emsp;<em>If I liked parties, I would attend more of them.</em></p>
+    <p>hôn fos noyo bît sûko kôndodû, û noyo bît li gô hoî eswen nîo.&emsp;<em>If I liked parties, I would attend more of them.</em></p>
     <p>hôn fos bît li hûzon hoî lono uklo, û umo bît li cifulo hoî tîton onô.&emsp;<em>If it rained tomorrow, people would dance in the street.</em></p>
     <p>hôn fos nîmû bît li cok bi îbûdû, û nîmû bît doîcêl oûtô kîskô nîmû lôîcôk.&emsp;<em>If you left now, you would still catch your train.</em></p>
 </HisyeoTabs>
@@ -173,7 +173,7 @@ thematic constituent is indicating that this clause is in the past tense.
 
 <HisyeoTabs>
     <p>hôn fos nîmû bît xokûlû sî noyo, û noyo bît li sî lô.&emsp;<em>If you had called me, I would have come.</em></p>
-    <p>nîûn bît li sî bîlûs hôn fos noyo bît li sî yôûlî mût nîûn ko.&emsp;<em>Would he have succeeded if I had helped him?</em></p>
+    <p>nîo bît li sî bîlûs hôn fos noyo bît li sî yôûlî mût nîo ko.&emsp;<em>Would he have succeeded if I had helped him?</em></p>
 </HisyeoTabs>
 
 ---
@@ -274,9 +274,9 @@ separate verb for the causative version of an action.
 
 <HisyeoTabs>
     <p>noyo ôlê niwos zonwul li êo môtô mût xûnyu.&emsp;<em>I had the barn burned down.</em></p>
-    <p>nîmû ôlê nîûn boîfôn êo nonto.&emsp;<em>You're making them cry.</em></p>
-    <p>umo Zon ke wêko êo sî fecko longi hoî niwos nîûn.&emsp;<em>John will have his house painted.</em></p>
-    <p>ônî bêûdo fohoso êo sî dênêmêk kon cukto nîûn.&emsp;<em>The students get their essays checked.</em></p>
+    <p>nîmû ôlê nîo boîfôn êo nonto.&emsp;<em>You're making them cry.</em></p>
+    <p>umo Zon ke wêko êo sî fecko longi hoî niwos nîo.&emsp;<em>John will have his house painted.</em></p>
+    <p>ônî bêûdo fohoso êo sî dênêmêk kon cukto nîo.&emsp;<em>The students get their essays checked.</em></p>
     <p>ônî cûdo yê cîgîlsu ôlê ônî dîyondê ke xokûlû êo ônî cîgîlsu.&emsp;<em>The doctor will have the nurse call the patients.</em></p>
 </HisyeoTabs>
 
