--- a/docs/works/north-wind-and-the-sun.mdx
+++ b/docs/works/north-wind-and-the-sun.mdx
@@ -15,10 +15,10 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 <HisyeoTabs>
     <p>woyû sôltûstik onô ûn bînton lono onô hoî ôhêl kôntêsto xokôn dîzel hôn xe li len eswen, bînê li ônî tuluti xe li sî gîk, fos û ôntôn lîbû kîldo yê tût yoûtî ûnhilun.&emsp;<em>The North Wind and the Sun were disputing which was the stronger, when a traveler came along wrapped in a warm cloak.</em></p>
-    <p>nîûn wofok sî fos kut nîûn fos hoî kut li bîlûs oxon fos ônî tuluti onô kôs fos ôntôn nîûn li fonmot sûn ûnhilun nîûn, li kut fos kûu somo len eswen en dîzel onô mût.&emsp;<em>They agreed that the one who first succeeded in making the traveler take his cloak off should be considered stronger than the other.</em></p>
-    <p>bînê woyû sôltûstik onô ûslêk sî bi len sumon en fos nîûn kôî ûslêk, lêkin nênko fos bi eswen û nîûn ûslêk, bi fêlkonô eswen û ônî tuluti onô ûnhilun cizî tô ôntôn onô ûn hoî fêlcîn û woyû sôltûstik onô nîltûgu sî dênêmêk onô.&emsp;<em>Then the North Wind blew as hard as he could, but the more he blew the more closely did the traveler fold his cloak around him; and at last the North Wind gave up the attempt.</em></p>
-    <p>bînê bînton lono onô boîfôn sî kûon bi tût yoûtî ûn hoî êfun cônkôk ulyô û ônî tuluti onô kôs sî fos ôntôn nîûn li fonmot sûn ûnhilun nîûn.&emsp;<em>Then the Sun shined out warmly, and immediately the traveler took off his cloak.</em></p>
-    <p>bînê woyû sôltûstik onô buswen sî xe kôto fos bînton lono onô li sî len eswen yê dûî nîûn.&emsp;<em>And so the North Wind was obliged to confess that the Sun was the stronger of the two.</em></p>
+    <p>nîo wofok sî fos kut nîo fos hoî kut li bîlûs oxon fos ônî tuluti onô kôs fos ôntôn nîo li fonmot sûn ûnhilun nîo, li kut fos kûu somo len eswen en dîzel onô mût.&emsp;<em>They agreed that the one who first succeeded in making the traveler take his cloak off should be considered stronger than the other.</em></p>
+    <p>bînê woyû sôltûstik onô ûslêk sî bi len sumon en fos nîo kôî ûslêk, lêkin nênko fos bi eswen û nîo ûslêk, bi fêlkonô eswen û ônî tuluti onô ûnhilun cizî tô ôntôn onô ûn hoî fêlcîn û woyû sôltûstik onô nîltûgu sî dênêmêk onô.&emsp;<em>Then the North Wind blew as hard as he could, but the more he blew the more closely did the traveler fold his cloak around him; and at last the North Wind gave up the attempt.</em></p>
+    <p>bînê bînton lono onô boîfôn sî kûon bi tût yoûtî ûn hoî êfun cônkôk ulyô û ônî tuluti onô kôs sî fos ôntôn nîo li fonmot sûn ûnhilun nîo.&emsp;<em>Then the Sun shined out warmly, and immediately the traveler took off his cloak.</em></p>
+    <p>bînê woyû sôltûstik onô buswen sî xe kôto fos bînton lono onô li sî len eswen yê dûî nîo.&emsp;<em>And so the North Wind was obliged to confess that the Sun was the stronger of the two.</em></p>
 </HisyeoTabs> 
 
 <HisyeoTooltip/>
